# wolf-spectrum

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.mk  README.md  bundle_source.sh  make_release.sh  provision.sh
.github/workflows/: dpf-makefile-action.yml  wolf-spectrum.yml
.reuse/: dep5
libs/inih/: ini.c
libs/kissfft/: kiss_fft.cpp
pkg/arch/: .SRCINFO  PKGBUILD
pkg/debian/: changelog  control  copyright  install  rules  watch
plugins/: Makefile.mk
plugins/wolf-spectrum/: DistrhoPluginInfo.h  Makefile  ScrollingTexture.cpp  ScrollingTexture.hpp  Spectrogram.cpp  Spectrogram.hpp  WolfSpectrumParameters.hpp  WolfSpectrumPlugin.cpp  WolfSpectrumPlugin.hpp  WolfSpectrumUI.cpp  WolfSpectrumUI.hpp
plugins/wolf-spectrum/Config/: Config.hpp
plugins/wolf-spectrum/Config/src/: Config.cpp
plugins/wolf-spectrum/Libs/fft/: fft.c.d  fft.cpp  fft.hpp
plugins/wolf-spectrum/Libs/inih/: ini.c
plugins/wolf-spectrum/Libs/kissfft/: _kiss_fft_guts.h  kiss_fft.h
plugins/wolf-spectrum/Libs/varchunk/: varchunk.c  varchunk.h
plugins/wolf-spectrum/Structures/: Layout.hpp  SmoothedGraph.hpp
plugins/wolf-spectrum/Structures/src/: Layout.cpp  SmoothedGraph.cpp
plugins/wolf-spectrum/Structures/test/: TestGraph.cpp
plugins/wolf-spectrum/Widgets/: ResizeHandle.hpp
src/: CMakeLists.txt  Config.hpp  DistrhoPluginInfo.h  Makefile  WolfSpectrumParameters.hpp  WolfSpectrumPlugin.cpp  WolfSpectrumPlugin.hpp  WolfSpectrumUI.cpp  WolfSpectrumUI.hpp
src/Config/: Config.hpp
src/Config/Themes/: default.conf
src/Config/src/: Config.cpp
src/Structures/: Animation.hpp  GraphTimeline.hpp  Margin.hpp  PeakFallSmooth.hpp  Ringbuffer.hpp
src/Structures/src/: GraphTimeline.cpp  Margin.cpp  PeakFallSmooth.cpp
src/Structures/test/: TestStack.cpp
src/Utils/: MIDIUtils.hpp  Mathf.hpp  SVGUtils.hpp  StringManipulation.hpp  generate-dpf-project.sh
src/Utils/Fonts/: Makefile
src/Utils/src/: Mathf.cpp
src/Widgets/: MenuWidget.hpp  ResizeHandle.hpp  ScrollingTexture.hpp  Spectrogram.hpp  StatusBar.hpp
src/Widgets/src/: MenuWidget.cpp  ResizeHandle.cpp  ScrollingTexture.cpp  Spectrogram.cpp  StatusBar.cpp
tools/: bundle-source.sh  format-code.sh
